he cambiado lo del guión y he puesto en packaje json para subir a eroku con npm run deploy

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <h2>API</h2>
         <ul>
             
-        <li><a href="http://sos1617-11.herokuapp.com/api/v1/uclchampions">Adrian Pérez (uclchampions)</a></br></li>
-        <li><a href="http://sos1617-11.herokuapp.com/api/v1/players">David Bonilla (players)</a></br></li>
+        <li><a href="http://sos1617-11-.herokuapp.com/api/v1/uclchampions">Adrian Pérez (uclchampions)</a></br></li>
+        <li><a href="http://sos1617-11-.herokuapp.com/api/v1/players">David Bonilla (players)</a></br></li>
         <!-- <li><a href="https://sos1617-11.herokuapp.com/api/v1/tests">Tests Postman</a></br></li>
         </ul>
         
