--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <ul>
             
         <li><a href="http://sos1617-11-.herokuapp.com/api/v1/uclchampions">Adrian Pérez (uclchampions)</a></br></li>
-        <li><a href="http://sos1617-11-.herokuapp.com/api/v1/players">David Bonilla (players)</a></br></li>
+        <li><a href="http://sos1617-11-.herokuapp.com/api/v1/lfppichichitrophy">David Bonilla (lfppichichitrophy)</a></br></li>
         <!-- <li><a href="https://sos1617-11.herokuapp.com/api/v1/tests">Tests Postman</a></br></li>
         </ul>
         
