--- a/public/tests.html
+++ b/public/tests.html
@@ -42,8 +42,20 @@ data-postman-var-1="8f2ca5e32202d8e121e1"></div>
 
 
 <!-- BOTON POSTMAN (ANDRES) -->
+<h1>POSTMAN LFPCHAMPIONS</h1>
 
-
+v<div class="postman-run-button"
+data-postman-action="collection/import"
+data-postman-var-1="2a8a0ce8aad72becc9c9"></div>
+<script type="text/javascript">
+  (function (p,o,s,t,m,a,n) {
+    !p[s] && (p[s] = function () { (p[t] || (p[t] = [])).push(arguments); });
+    !o.getElementById(s+t) && o.getElementsByTagName("head")[0].appendChild((
+      (n = o.createElement("script")),
+      (n.id = s+t), (n.async = 1), (n.src = m), n
+    ));
+  }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
+</script>
     </body>
     
     
