--- a/public/tests.html
+++ b/public/tests.html
@@ -21,6 +21,21 @@ data-postman-var-1="9f5317bc2be833923e04"></div>
   }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
 </script>
 
+<!--BOTON ADRI 2.0
+<div class="postman-run-button"
+data-postman-action="collection/import"
+data-postman-var-1="dafb179fceb42c83698f"></div>
+<script type="text/javascript">
+  (function (p,o,s,t,m,a,n) {
+    !p[s] && (p[s] = function () { (p[t] || (p[t] = [])).push(arguments); });
+    !o.getElementById(s+t) && o.getElementsByTagName("head")[0].appendChild((
+      (n = o.createElement("script")),
+      (n.id = s+t), (n.async = 1), (n.src = m), n
+    ));
+  }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
+</script>
+-->
+
 
 <!-- BOTON POSTMAN (DAVID) -->
 <h1>POSTMAN LFPPICHICHITROPHY</h1>
