--- a/public/tests.html
+++ b/public/tests.html
@@ -6,7 +6,7 @@
         <h4>uclchampions-stats</h4>
       </p>
         
-        <!-- BOTON POSTMAN UCLCHAMPIONS (ADRIAN) -->
+        <!-- BOTON POSTMAN UCLCHAMPIONS (ADRIAN)
         <h1>POSTMAN UCLCHAMPIONS</h1>
         <div class="postman-run-button"
 data-postman-action="collection/import"
@@ -19,9 +19,9 @@ data-postman-var-1="9f5317bc2be833923e04"></div>
       (n.id = s+t), (n.async = 1), (n.src = m), n
     ));
   }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
-</script>
+</script> -->
 
-<!--BOTON ADRI 2.0
+<!--BOTON ADRI 2.0-->
 <div class="postman-run-button"
 data-postman-action="collection/import"
 data-postman-var-1="dafb179fceb42c83698f"></div>
@@ -34,7 +34,7 @@ data-postman-var-1="dafb179fceb42c83698f"></div>
     ));
   }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
 </script>
--->
+
 
 
 <!-- BOTON POSTMAN (DAVID) -->
