--- a/public/tests.html
+++ b/public/tests.html
@@ -2,10 +2,6 @@
 <html>
     
     <body>
-      <p>
-        <h4>uclchampions-stats</h4>
-      </p>
-        
         <!-- BOTON POSTMAN UCLCHAMPIONS (ADRIAN)
         <h1>POSTMAN UCLCHAMPIONS</h1>
         <div class="postman-run-button"
@@ -22,6 +18,7 @@ data-postman-var-1="9f5317bc2be833923e04"></div>
 </script> -->
 
 <!--BOTON ADRI 2.0-->
+<h1>POSTMAN UCLCHAMPIONS</h1>
 <div class="postman-run-button"
 data-postman-action="collection/import"
 data-postman-var-1="dafb179fceb42c83698f"></div>
