--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         
     <h2>Tests Portman</h2>
         <ul>
-        <li><h3><a href='/tests'>Tests</a></h3></li>
+        <li><h3><a href='api/v1/public/tests.html'>Tests</a></h3></li>
         </ul>-->
 </body>
 
