--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
         <li><a href="http://sos1617-11-.herokuapp.com/api/v1/lfppichichitrophy">David Bonilla (lfppichichitrophy)</a></br></li>
           <li><a href="http://sos1617-11-.herokuapp.com/api/v1/lfpchampions">Andrés Fernández (lfpchampions)</a></br></li>
         <!-- <li><a href="https://sos1617-11.herokuapp.com/api/v1/tests">Tests Postman</a></br></li>
-        </ul>
+        </ul> -->
         
     <h2>Tests Portman</h2>
         <ul>
-        <li><h3><a href='api/v1/public/tests.html'>Tests</a></h3></li>
-        </ul>-->
+        <li><h3><a href='https://sos1617-11.herokuapp.com/api/v1/tests'>Tests Postman</a></h3></li>
+        </ul>
 </body>
 
 </html>
