--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,16 @@
     </li>
         <ul>
             
-        <li><a href="http://sos1617-11-.herokuapp.com/api/v1/uclchampions">Adrian Pérez (uclchampions)</a></br></li>
-        <li><a href="http://sos1617-11-.herokuapp.com/api/v1/lfppichichitrophy">David Bonilla (lfppichichitrophy)</a></br></li>
-          <li><a href="http://sos1617-11-.herokuapp.com/api/v1/lfpchampions">Andrés Fernández (lfpchampions)</a></br></li>
+        <li><a href="http://sos1617-11-.herokuapp.com/api/v1/uclchampions?apikey=adrdavand">Adrian Pérez (uclchampions)</a></br></li>
+        <li><a href="http://sos1617-11-.herokuapp.com/api/v1/lfppichichitrophy?apikey=adrdavand">David Bonilla (lfppichichitrophy)</a></br></li>
+          <li><a href="http://sos1617-11-.herokuapp.com/api/v1/lfpchampions?apikey=adrdavand">Andrés Fernández (lfpchampions)</a></br></li>
         <!-- <li><a href="https://sos1617-11.herokuapp.com/api/v1/tests">Tests Postman</a></br></li> -->
         </ul>
     <li>   
         <h2>Tests Portman</h2>
     </li>
         <ul>
-        <li><h3><a href='https://sos1617-11.herokuapp.com/api/v1/tests'>Tests Postman</a></h3></li>
+        <li><h3><a href='https://sos1617-11-.herokuapp.com/api/v1/tests'>Tests Postman</a></h3></li>
         </ul>
     <li>   
     <h2>Descripcion fuente de datos</h2>
@@ -37,6 +37,7 @@
         <ul>
         <li><h4>UCLCHAMPIONS (Adrian) => To analyze the champions of Uefa Champions League of all the years</h4></li>
         <li><h4>LFPPICHICHITROPHY (David) => To analyze the maximum scorers of each season of the Spanish league</h4></li>
+        <li><h4>LFPPICHICHITROPHY (Andres) => To analyze the champions of each season of the Spanish league</h4></li>
         </ul>
 </body>
 
