--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     </li>
         <ul>
             
-        <li><a href=https://sos161711dbd-sandbox-sos161711dbd.c9users.io/SOS1617-11/public/index-David.html>David Bonilla (lfppichichitrophy)</a></br></li>
+        <li><a href=http://sos1617-11-.herokuapp.com/api/v1/pichichi-angular>David Bonilla (lfppichichitrophy)</a></br></li>
         </ul>
         
 </body>
