--- a/public/angularPichichi/index.html
+++ b/public/angularPichichi/index.html
@@ -29,7 +29,7 @@
         
     </head>
     <body >
-        <div ng-controller="pichichi-ctrl">
+        <div ng-controller="Pichichi-ctrl">
             <h2>Pichichi</h2>
             <table class="table">
                 <thead>
