--- a/public/angularPichichi/index.html
+++ b/public/angularPichichi/index.html
@@ -35,7 +35,7 @@
                     <tr>
                         <!--<th>Introduce APIKEY<input class="form-control" ng-model="apikey"></th>-->
                         <th class="text-center"><button class="btn-primary" ng-click="getData()">GET DATA</button></th>
-                        <!--<th class="text-center"><button class="btn-primary" ng-click="loadInitialData()">INICIALIZA</button></th>-->
+                        <th class="text-center"><button class="btn-primary" ng-click="loadInitialData()">INICIALIZA</button></th>
                     </tr>
                     </thead> 
                     
