--- a/public/angularPichichi/index.html
+++ b/public/angularPichichi/index.html
@@ -31,9 +31,9 @@
             <h2>Pichichi</h2>
             <table class="table">
                 <thead>
-                    <!--<tr><h4>APIKEY: adrdavand</h4></tr>-->
+                    <tr><h4>APIKEY: adrdavand</h4></tr>
                     <tr>
-                        <!--<th>Introduce APIKEY<input class="form-control" ng-model="apikey"></th>-->
+                        <th>Introduce APIKEY<input class="form-control" ng-model="apikey"></th>
                         <th class="text-center"><button class="btn-primary" ng-click="getData()">GET DATA</button></th>
                         <th class="text-center"><button class="btn-primary" ng-click="loadInitialData()">INICIALIZA</button></th>
                     </tr>
