--- a/public/angularPichichi/index.html
+++ b/public/angularPichichi/index.html
@@ -34,7 +34,7 @@
                     <tr><h4>APIKEY: adrdavand</h4></tr>
                     <tr>
                         <th>Introduce APIKEY<input class="form-control" ng-model="apikey"></th>
-                        <th class="text-center"><button class="btn-primary" ng-click="refres()">GET DATA</button></th>
+                        <th class="text-center"><button class="btn-primary" ng-click="refresh()">GET DATA</button></th>
                         <th class="text-center"><button class="btn-primary" ng-click="loadInitialData()">INICIALIZA</button></th>
                     </tr>
                     </thead> 
