--- a/public/angularPichichi/index.html
+++ b/public/angularPichichi/index.html
@@ -26,10 +26,10 @@
        
         
     </head>
-    <body >
+    <body style="width:1100px; margin-left:250px; border: 5px dotted blue>
         <div ng-controller="Pichichi-ctrl">
             <h2>Pichichi</h2>
-            <table class="table">
+            <table class="table table-striped">
                 <thead>
                     <tr><h4>APIKEY: adrdavand</h4></tr>
                     <tr>
