--- a/public/angularPichichi/index.html
+++ b/public/angularPichichi/index.html
@@ -84,11 +84,11 @@
                 <tbody>
                 
                     <tr>
-                        <td class="info"><input class="form-control" ng.model="newlfppichichitrophy.nationality" placeholder="Nationality"></td>
-                        <td class="info"><input class="form-control" ng.model="newlfppichichitrophy.season "placeholder="Season"></td>
-                        <td class="info"><input class="form-control" ng.model="newlfppichichitrophy.name" placeholder="Name"></td>
-                        <td class="info"><input class="form-control" ng.model="newlfppichichitrophy.team" placeholder="Team"></td>
-                        <td class="info"><input class="form-control" ng.model="newlfppichichitrophy.goal " placeholder="Goal"></td>
+                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.nationality" placeholder="Nationality"></td>
+                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.season" placeholder="Season"></td>
+                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.name" placeholder="Name"></td>
+                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.team" placeholder="Team"></td>
+                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.goal" placeholder="Goal"></td>
                         <td class="info"><button class = "button btn-primary" ng-click="addPichichi()">Add</button></td>
 
                     </tr>
@@ -98,7 +98,7 @@
                         <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.season"></td>
                         <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.name" ></td>
                         <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.team" ></td>
-                        <td class="info"><input class="form-control" ng.model="newlfppichichitrophy.goal"></td>
+                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.goal"></td>
                         <td class="info" ><button class="btn btn-warning" ng-click="editaPichichi()">EDITAR PICHICHI</button></td>
                     </tr>
                    
