--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
         <ul>
             
         <li><a href=http://sos1617-11-.herokuapp.com/api/v1/pichichi-angular>David Bonilla (lfppichichitrophy)</a></br></li>
+        <li><a href=http://sos1617-11-.herokuapp.com/api/v1/uclchampions-angular>Adrian Perez (uclchampions)</a></br></li>
         </ul>
         
 </body>
