--- a/public/angularUclchampions/index.html
+++ b/public/angularUclchampions/index.html
@@ -27,7 +27,7 @@
         
     </head>
     <body >
-        <div ng-controller="uclchampions-ctrl">
+        <div ng-controller="Uclchampion-ctrl">
             <h2>UCL CHAMPIONS</h2>
             <table class="table">
                 <thead>
