--- a/public/tests.html
+++ b/public/tests.html
@@ -49,7 +49,7 @@ data-postman-var-1="8f2ca5e32202d8e121e1"></div>
 <!-- BOTON POSTMAN (ANDRES) -->
 <h1>POSTMAN LFPCHAMPIONS</h1>
 
-v<div class="postman-run-button"
+<div class="postman-run-button"
 data-postman-action="collection/import"
 data-postman-var-1="2a8a0ce8aad72becc9c9"></div>
 <script type="text/javascript">
