--- a/public/angularPichichi/index.html
+++ b/public/angularPichichi/index.html
@@ -25,6 +25,8 @@
         
         <script type="text/javascript" src="/angularPichichi/pichichi-manager.js"></script>
         <script type="text/javascript" src="/angularPichichi/pichichi-ctrl.js"></script>
+        <script type="text/javascript" src="/angularPichichi/edit-ctrl.js"></script>
+        
     </head>
     <body>
         <div ng-view>
