--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
         
         <li><h2>FRONT-END</h2></li>
         <ul>
-            <li><h4><a href=http://sos1617-11-.herokuapp.com/api/v1/pichichi-angular>David Bonilla (lfppichichitrophy)</a></h4></li>
-            <li><h4><a href=http://sos1617-11-.herokuapp.com/api/v1/uclchampions-angular>Adrian Perez (uclchampions)</a></h4></li>
+            <li><h4><a href=http://sos1617-11-.herokuapp.com/angularPichichi>David Bonilla (lfppichichitrophy)</a></h4></li>
+            <li><h4><a href=http://sos1617-11-.herokuapp.com/angularUclchampions>Adrian Perez (uclchampions)</a></h4></li>
         </ul>
     </ul>
         
