--- a/public/angularUclchampions/list.html
+++ b/public/angularUclchampions/list.html
@@ -77,7 +77,7 @@
                    
                     
                     <tr ng-repeat="champion in uclchampions"> 
-                        <td><a href="#!/uclchampion/{{champion.year}}">{{uclchampion.year}}</a></td>
+                        <td>{{uclchampion.year}}</a></td>
                         <td>{{champion.champion}}</td>
                         <td>{{champion.runnerup}}</td>
                         <td>{{champion.stadium}}</td>
