--- a/public/angularUclchampions/edit.html
+++ b/public/angularUclchampions/edit.html
@@ -13,12 +13,12 @@
                 
     <tbody>
         <tr>
-            <td class="info">{{updateduclchampions.year}}</td>
-            <td class="info"><input class="form-control" ng-model="updateduclchampions.champion"></td>
-            <td class="info"><input class="form-control" ng-model="updateduclchampions.runnerup" ></td>
-            <td class="info"><input class="form-control" ng-model="updateduclchampions.stadium" ></td>
-            <td class="info"><input class="form-control" ng-model="updateduclchampions.city"></td>
-            <td class="info" ><button class="btn btn-warning" ng-click="editauclchampion()">EDITAR CAMPEON</button></td>
+            <td>{{updatedUclchampion.year}}</td>
+            <td class="info"><input class="form-control" ng-model="updatedUclchampion.champion"></td>
+            <td class="info"><input class="form-control" ng-model="updatedUclchampion.runnerup" ></td>
+            <td class="info"><input class="form-control" ng-model="updatedUclchampion.stadium" ></td>
+            <td class="info"><input class="form-control" ng-model="updatedUclchampion.city"></td>
+            <td class="info" ><button class="btn btn-warning" ng-click="editUclchampion()">EDITAR CAMPEON</button></td>
         </tr>
     </tbody>    
 </table>
