--- a/public/angularUclchampions/index.html
+++ b/public/angularUclchampions/index.html
@@ -26,7 +26,9 @@
         <script type="text/javascript" src="/angularUclchampions/uclchampions-manager.js"></script>
         <script type="text/javascript" src="/angularUclchampions/uclchampions-ctrl.js"></script>
         <script type="text/javascript" src="/angularUclchampions/edit-ctrl.js"></script>
-
+        <!--<link data-require="bootstrap-css@2.3.2" data-semver="2.3.2" rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" /> -->
+   <!-- <script data-require="angular.js@1.1.5" data-semver="1.1.5" src="http://code.angularjs.org/1.1.5/angular.min.js"></script>
+    <script data-require="angular-ui-bootstrap@0.3.0" data-semver="0.3.0" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.3.0.min.js"></script> -->
        
         
     </head>
