--- a/public/angularPichichi/inicio.html
+++ b/public/angularPichichi/inicio.html
@@ -71,7 +71,7 @@
                     
                     <tr ng-repeat="pichichi in lfppichichitrophy"> 
                         <td>{{pichichi.nationality}}</td>
-                        <td>{{pichichi.season}}</td>
+                        <td><a href = "#!/update/:{{lfppichichitrophy.season}}">{{pichichi.season}}</a></td>
                         <td>{{pichichi.name}}</td>
                         <td>{{pichichi.team}}</td>
                         <td>{{pichichi.goal}}</td>
