--- a/public/angularUclchampions/edit.html
+++ b/public/angularUclchampions/edit.html
@@ -13,7 +13,7 @@
                 
     <tbody>
         <tr>
-                        <td class="info"><input class="form-control" ng-model="updatedUclchampion.year"></td>
+                        <td class="info">{{updatedUclchampion.year}}</td>
                         <td class="info"><input class="form-control" ng-model="updatedUclchampion.champion"></td>
                         <td class="info"><input class="form-control" ng-model="updatedUclchampion.runnerup" ></td>
                         <td class="info"><input class="form-control" ng-model="updatedUclchampion.stadium" ></td>
