--- a/public/angularPichichi/edit.html
+++ b/public/angularPichichi/edit.html
@@ -15,12 +15,12 @@
                 
             <tbody>
                     <tr>
-                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.nationality"></td>
-                        <td class="info">{{pichichi.season}}</td>
-                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.name" ></td>
-                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.team" ></td>
-                        <td class="info"><input class="form-control" ng-model="newlfppichichitrophy.goal"></td>
-                        <td class="info" ><button class="btn btn-warning" ng-click="editaPichichi()">EDITAR PICHICHI</button></td>
+                        <td class="info"><input class="form-control" ng-model="updatePichichi.nationality"></td>
+                        <td class="info">{{updatePichichi.season}}</td>
+                        <td class="info"><input class="form-control" ng-model="updatePichichi.name" ></td>
+                        <td class="info"><input class="form-control" ng-model="updatePichichi.team" ></td>
+                        <td class="info"><input class="form-control" ng-model="updatePichichi.goal"></td>
+                        <td class="info" ><button class="btn btn-succes" ng-click="editaPichichi()">EDITAR PICHICHI</button></td>
                     </tr>
             </tbody>
     </table>
