--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,8 @@
         <ul>
             <li><h4><a href=http://sos1617-11-.herokuapp.com/angularPichichi>David Bonilla (lfppichichitrophy)</a></h4></li>
             <li><h4><a href=http://sos1617-11-.herokuapp.com/angularUclchampions>Adrian Perez (uclchampions)</a></h4></li>
+            <li><h4><a href=http://sos1617-11-.herokuapp.com/angularLfpChampions>Andres Fernandez (lfpchampions)</a></h4></li>
+
         </ul>
     </ul>
         
