--- a/public/angularLfpChampions/edit.html
+++ b/public/angularLfpChampions/edit.html
@@ -13,12 +13,11 @@
                 
             <tbody>
                     <tr
-                        <td class="info"><input class="form-control" ng-model="updatedLfpChampions.champion"></td>
-                        <td class="info">{{updatedLfpChampions.season}}</td>
-                        <td class="info"><input class="form-control" ng-model="updatedLfpChampions.championcity" ></td>
-                        <td class="info"><input class="form-control" ng-model="updatedLfpChampions.season" ></td>
-                        <td class="info"><input class="form-control" ng-model="updatedLfpChampions.runnerup"></td>
-                        <td class="info"><button class="btn btn-succes" ng-click="editaLfpChampions(updatedLfpChampions)">EDITAR LFPCHAMPIONS</button></td>
+                        <td class="info"><input class="form-control" ng-model="updatedLfpChampion.champion"></td>
+                        <td class="info"><input class="form-control" ng-model="updatedLfpChampion.championcity" ></td>
+                        <td class="info">{{updatedLfpChampion.season}}</td>
+                        <td class="info"><input class="form-control" ng-model="updatedLfpChampion.runnerup"></td>
+                        <td class="info"><button class="btn btn-succes" ng-click="editaLfpChampion(updatedLfpChampion)">EDITAR LFPCHAMPION</button></td>
                     </tr>
             </tbody>
     </table>
